# gmtds-client

./: data.json  pyproject.toml
.github/workflows/: lint.yml
gmtds_client/: __init__.py
notebooks/: explore_api.ipynb  plot.ipynb
