[tool.poetry]
name = "gmtds-client"
version = "0.0.1"
description = "Unofficial Python client for the Global Maritime Traffic Density Service (GMTDS)"
authors = ["Shunichiro Nomura <nomura@space.t.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
