[tool.poetry]
name = "gmtds-client"
version = "0.0.1"
description = "Unofficial Python client for the Global Maritime Traffic Density Service (GMTDS)"
authors = ["Shunichiro Nomura <nomura@space.t.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
requests = ">=2.31.0"
aiohttp = ">=3.9.3"
numpy = ">=1.26.3"
tqdm = ">=4.66.1"

[tool.poetry.group.dev.dependencies]
ruff = "0.7.0"
mypy = "1.12.0"
pytest = "8.3.3"
ipykernel = "6.29.5"
matplotlib = "3.9.2"
types-tqdm = "4.66.0.20240417"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "PLR2004", # magic numbers
    "S101",    # use of assert
    "G",       # logging format
    "ANN101",  # missing type annotation for self in method
    "ANN102",  # missing type annotation for cls in classmethod
    "D100",    # missing docstring in public module
    "D101",    # missing docstring in public class
    "D102",    # missing docstring in public method
    "D103",    # missing docstring in public function
    "D104",    # missing docstring in public package
    "D105",    # missing docstring in magic method
    "D107",    # missing docstring in __init__
    "D203",    # 1 blank line required before class docstring
    "D213",    # multi-line docstring summary should start at the second line
    "PGH003",  # Use specific rule codes when ignoring type issues
    "RET505",  # Unnecessary `else` after `return` statement
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "TD003",   # add link on issue into TODO
    "FIX002",  # Line contains TODO
    "ERA001",  # commented-out-code
    "PLR0913", # Too many arguments in function definition
]
[tool.ruff.lint.per-file-ignores]
"**.ipynb" = [
    "B018",   # useless-expression
    "T201",   # print statement
    "PTH123", # `open()` should be replaced by `Path.open()`
]
